storage/xtradb/log/log0log.cc
@@ -1561,12 +1561,6 @@ log_write_up_to(
 		return;
 	}
 
-	if (srv_shutdown_state != SRV_SHUTDOWN_NONE) {
-		service_manager_extend_timeout(INNODB_EXTEND_TIMEOUT_INTERVAL,
-					       "log write up to: " LSN_PF,
-					       lsn);
-	}
-
 loop:
 	ut_ad(++loop_count < 100);
 
@@ -1678,6 +1672,13 @@ loop:
 
 	log_sys->buf_free += OS_FILE_LOG_BLOCK_SIZE;
 	log_sys->write_end_offset = log_sys->buf_free;
+
+	if (UNIV_UNLIKELY(srv_shutdown_state != SRV_SHUTDOWN_NONE)) {
+		service_manager_extend_timeout(INNODB_EXTEND_TIMEOUT_INTERVAL,
+					       "InnoDB log write: "
+					       LSN_PF "," LSN_PF,
+					       log_sys->write_lsn, lsn);
+	}
 
 	group = UT_LIST_GET_FIRST(log_sys->log_groups);
 
